Contrast fix

--- a/css/style.css
+++ b/css/style.css
@@ -190,8 +190,8 @@ ul {
     font-size: 2.5vw;
     border: 0.7vh black solid;
     color: white;
-    background: rgb(200,200,200);
-    box-shadow: inset -0.5vw 0 rgb(120,120,120), inset 0 0.5vw rgb(255,255,255), inset 0 -0.5vw rgb(120,120,120), inset 0.5vw 0 rgb(255,255,255), 0.5vw 0.5vw rgb(0 0 0 / 25%);
+    background: rgb(150,150,150);
+    box-shadow: inset -0.5vw 0 rgb(70,70,70), inset 0 0.5vw rgb(205,205,205), inset 0 -0.5vw rgb(70,70,70), inset 0.5vw 0 rgb(205,205,205), 0.5vw 0.5vw rgb(0 0 0 / 25%);
     text-shadow: 0.25vw 0.25vw 0 rgb(0 0 0 / 25%);
 }
 
@@ -310,9 +310,9 @@ h1 {
     font-family: 'Press Start 2P', cursive;
     padding: 2vh 0;
     border: 0.75vh black solid;
-    background: rgb(200,200,200);
+    background: rgb(150,150,150);
     color: white;
-    box-shadow: inset -0.5vw 0 rgb(120,120,120), inset 0 0.5vw rgb(255,255,255), inset 0 -0.5vw rgb(120,120,120), inset 0.5vw 0 rgb(255,255,255), 0.5vw 0.5vw rgb(0 0 0 / 25%);
+    box-shadow: inset -0.5vw 0 rgb(70,70,70), inset 0 0.5vw rgb(205,205,205), inset 0 -0.5vw rgb(70,70,70), inset 0.5vw 0 rgb(205,205,205), 0.5vw 0.5vw rgb(0 0 0 / 25%);
     text-shadow: 0.25vw 0.25vw 0 rgb(0 0 0 / 25%);
     transition: none;
 }
@@ -322,7 +322,7 @@ h1 {
 }
 
 .thisSite {
-    color: rgb(235,235,200);
+    color: rgb(255, 255, 100);
 }
 
 
